--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "lodash": "^4.17.2",
     "mongoose": "^4.6.8",
     "node-restful": "^0.2.5"
   }
